# slddb

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README  README.rst  README_TESTING  README_TESTING.rst  SECURITY.rst  create_database.py  enter_data_christy.py  enter_data_softmatter.py  pyproject.toml  requirements.txt  slddbqt.py  testdata_christy.py  testdata_chrity.py  wsgi.py
.github/ISSUE_TEMPLATE/: feature_request.md  python-bug-report.md  website-bug-report.md
.github/workflows/: codeql-analysis.yml  pytest.yml
data_sources/: atomic_weights.txt  extract_data.py  nist_nlengths.txt
flaskr/: __init__.py  api.py  authentication.py  blender.py  calcsld.py  email_encryption.py  flask_embed.py  inputdb.py  periodic_table.py  querydb.py  sample_model.py  wsgi.py
flaskr/static/: bio_blender.js  collapsible.js  example_models.js  general.js  general_style.css  layout_admin.css  layout_base.css  layout_bio_blender.css  layout_input.css  layout_periodic_table.css  layout_sample.css  layout_search.css  layout_sldcalc.css  style.css  (+7 more)
qt_interface/: slddb_window.ui
slddb/: __init__.py  api.py  blender.py  chemical_formula.py  comparators.py  constants.py  converters.py  database.py  dbconfig.py  element_table.py  importers.py  material.py  webapi.py
slddb_server/: __init__.py  authentication.py  blender.py  calcsld.py  inputdb.py  periodic_table.py  querydb.py  sample_model.py
tests/: test_cif.py  test_converters.py  test_dbcreation.py  test_dbimport.py  test_dbmaterial.py  test_elements.py  test_formula.py  test_material.py  test_webapi.py
(+78 files in other folders)
